# Calmpanion

./: .gitignore  README.md  app.py  config.py  feedback.db  flask_app.py  index.html  main.py  pyproject.toml  requirements.txt  streamlit_wrapper.py
.github/workflows/: github-actions-ec2.yml  github-actions-streamlit.yml  main.yml
static/css/: style.css
static/js/: main.js
templates/: index.html  streamlit.html
utils/: audio_handler.py  data_handler.py  model_handler.py  prompt_templates.py
