[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.4",
    "langchain",
    "llama-cpp-python>=0.3.7",
    "speechrecognition>=3.14.1",
    "streamlit>=1.42.2",
    "huggingface-hub",
    "langchain_community"
]
