
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TranquiliChat"
version = "0.1.1"
description = "AI Chatbot with Streamlit"
requires-python = "==3.11"
authors = [
    {name = "Digvijay Yadav"},
    {name = "Manohar Mata"}
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sounddevice",
    "streamlit",
    "langchain",
    "langchain-community",
    "huggingface_hub",
    "wave",
    "openai-whisper",
    "torch"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.1.0",
    "flake8>=4.0.1",
]

[project.urls]
"Homepage" = "https://github.com/digs1998/TranquiliChat/"
"Bug Tracker" = "https://github.com/digs1998/TranquiliChat/Issues"

[tool.setuptools]
packages = ["utils"]

[tool.black]
line-length = 88
target-version = ["py311"]
